<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marwatalaat.project0.MainActivity"
    android:background="@color/bgColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp">

        <TextView
            android:text="@string/nan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            />

        <Button
            android:text="@string/popmovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/btnStyle" />

        <Button
            android:text="@string/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/btnStyle" />

        <Button
            android:text="@string/bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/btnStyle" />

        <Button
            android:text="@string/materialUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/btnStyle" />

        <Button
            android:text="@string/goun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            style="@style/btnStyle" />

        <Button
            android:text="@string/caps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            style="@style/btnStyle" />
    </LinearLayout>
</RelativeLayout>
